@@ -50,7 +50,6 @@
 #include "lbann/callbacks/alternate_updates.hpp"
 #include "lbann/callbacks/gpu_memory_usage.hpp"
 #include "lbann/callbacks/hang.hpp"
-#include "lbann/callbacks/imcomm.hpp"
 #include "lbann/callbacks/learning_rate.hpp"
 #include "lbann/callbacks/load_model.hpp"
 #include "lbann/callbacks/ltfb.hpp"
@@ -157,7 +156,6 @@ void register_default_builders(factory_type& factory)
   factory.register_builder("CallbackGPUMemoryUsage",
                            build_gpu_memory_usage_callback_from_pbuf);
   factory.register_builder("CallbackHang", build_hang_callback_from_pbuf);
-  factory.register_builder("CallbackImComm", build_imcomm_callback_from_pbuf);
   factory.register_builder(
     "CallbackLinearGrowthLearningRate",
     build_linear_growth_learning_rate_callback_from_pbuf);
